WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305542
AX: input type=button live regions don't announce changes
https://bugs.webkit.org/show_bug.cgi?id=305542
Summary
AX: input type=button live regions don't announce changes
Joshua Hoffman
Reported
2026-01-14 23:00:22 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-14 23:00:28 PST
<
rdar://problem/168200460
>
Joshua Hoffman
Comment 2
2026-01-14 23:06:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56619
EWS
Comment 3
2026-01-16 22:33:15 PST
Committed
305757@main
(2af7030a6121): <
https://commits.webkit.org/305757@main
> Reviewed commits have been landed. Closing PR #56619 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug