AX: input type=button live regions don't announce changes https://bugs.webkit.org/show_bug.cgi?id=305542 rdar://168200460

Reviewed by Tyler Wilcock.

Inputs of type "button" that were live regions were not announcing changes. There are three
reasons for this:
- Button input types did not call AXObjectCache::valueChanged when the value changed.
- AXObjectCache::postLiveRegionChangeNotification was not called by AXObjectCache::valueChanged.
- Live region text computation didn't consider the title of an element, which is how buttons,
for example, expose their values.

After fixing these three issues, changing the value on a aria-live button will result in
an announcement.

Tests: accessibility/mac/live-regions/live-region-inputs.html
       accessibility/mac/live-regions/live-region-nested-input.html

* LayoutTests/accessibility/mac/live-regions/live-region-inputs-expected.txt: Added.
* LayoutTests/accessibility/mac/live-regions/live-region-inputs.html: Added.
* LayoutTests/accessibility/mac/live-regions/live-region-nested-input-expected.txt: Added.
* LayoutTests/accessibility/mac/live-regions/live-region-nested-input.html: Added.
* Source/WebCore/accessibility/AXLiveRegionManager.cpp:
(WebCore::AXLiveRegionManager::buildLiveRegionSnapshot const):
(WebCore::AXLiveRegionManager::textForObject const):
* Source/WebCore/accessibility/AXLiveRegionManager.h:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::valueChanged):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::announcementText const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/html/BaseButtonInputType.cpp:
(WebCore::BaseButtonInputType::setValue):
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::attributeChanged):

Canonical link: https://commits.webkit.org/305757@main